# bitfields-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
bitfields/: Cargo.toml  README.md  build.rs
bitfields/examples/: array_backed.rs  array_field.rs  basic.rs  bitflags.rs  builder.rs  custom_types.rs  defaults.rs  from_bits.rs  from_bits_read_only.rs  from_bits_with_defaults.rs  test_from_bits_with_defaults.rs  test_from_trait_ro.rs  test_ro.rs  test_ro_bool_debug.rs  test_ro_comprehensive.rs  test_set_bits_ro.rs
bitfields/src/: lib.rs
bitfields/tests/: lib_array_backed_tests.rs  lib_array_field_array_backed_tests.rs  lib_array_field_tests.rs  lib_feature_flag_tests.rs  lib_tests.rs  rust_version.rs
bitfields/tests/compile_error_cases/: bitfield_attribute_non_struct.rs  bitfield_attribute_non_struct.stderr  bitfield_bit_ops_disabled.rs  bitfield_bit_ops_disabled.stderr  bitfield_bitfield_unknown_arg.stderr  bitfield_custom_type_no_bit_size.stderr  bitfield_default_value_too_big_for_type.rs  bitfield_default_value_too_big_for_type.stderr  bitfield_disable_builder.rs  bitfield_disable_builder.stderr  bitfield_disable_debug.rs  bitfield_disable_debug.stderr  bitfield_disable_default.rs  bitfield_disable_default.stderr  bitfield_disable_from_bits.rs  bitfield_disable_from_bits.stderr  bitfield_disable_from_trait.rs  bitfield_disable_from_trait.stderr  bitfield_disable_into_bits.rs  bitfield_disable_into_bits.stderr  bitfield_disable_new.rs  bitfield_disable_new.stderr  bitfield_field_access_padding_value.rs  bitfield_field_access_padding_value.stderr  bitfield_field_access_read_only_can_not_write.rs  bitfield_field_access_read_only_can_not_write.stderr  bitfield_field_access_read_only_can_not_write_builder.rs  bitfield_field_access_read_only_can_not_write_builder.stderr  bitfield_field_access_write_only.rs  bitfield_field_access_write_only.stderr  bitfield_field_access_write_only_builder.rs  bitfield_field_access_write_only_builder.stderr  bitfield_field_bits_attribute_without_array.rs  bitfield_field_bits_attribute_without_array.stderr  bitfield_field_defined_bits_0.rs  bitfield_field_defined_bits_0.stderr  bitfield_field_defined_bits_less_than_bitfield_type_size.rs  bitfield_field_defined_bits_less_than_bitfield_type_size.stderr  bitfield_field_defined_bits_more_than_bitfield_type_size.stderr  bitfield_field_defined_bits_too_small_for_default_value.stderr  (+42 more)
bitfields/tests/compile_error_cases/errors/: bitfield_arg_without_value.rs  bitfield_arg_without_value.stderr  bitfield_attribute_non_struct.stderr  bitfield_bit_ops_disabled.rs  bitfield_bit_ops_disabled.stderr  bitfield_builder_can_not_write_ro_field.rs  bitfield_builder_can_not_write_ro_field.stderr  bitfield_custom_type_no_bit_size.rs  bitfield_custom_type_no_bit_size.stderr  bitfield_default_value_too_big_for_type.rs  bitfield_default_value_too_big_for_type.stderr  bitfield_default_value_unknown_suffix.rs  bitfield_default_value_unknown_suffix.stderr  bitfield_disable_builder.rs  bitfield_disable_builder.stderr  bitfield_disable_debug.rs  bitfield_disable_debug.stderr  bitfield_disable_default.rs  bitfield_disable_default.stderr  bitfield_disable_from_bits.rs  bitfield_disable_from_bits.stderr  bitfield_disable_from_trait.rs  bitfield_disable_from_trait.stderr  bitfield_disable_into_bits.rs  bitfield_disable_into_bits.stderr  bitfield_disable_into_trait.rs  bitfield_disable_into_trait.stderr  bitfield_disable_new.rs  bitfield_disable_new.stderr  bitfield_field_access_read_only_can_not_write.stderr  bitfield_field_access_read_only_can_not_write_builder.stderr  bitfield_field_access_reserved_value.rs  bitfield_field_access_reserved_value.stderr  bitfield_field_access_write_only.rs  bitfield_field_access_write_only.stderr  bitfield_field_access_write_only_builder.rs  bitfield_field_access_write_only_builder.stderr  bitfield_field_bits_attribute_without_array.stderr  bitfield_field_bits_with_suffix.rs  bitfield_field_bits_with_suffix.stderr  (+129 more)
bitfields/tests/compile_error_cases/errors/array_fields/: array_field_array_backed_msb_overflow.rs  array_field_array_backed_msb_overflow.stderr  array_field_array_backed_too_few_bits.rs  array_field_array_backed_too_few_bits.stderr  array_field_array_backed_too_many_bits.rs  array_field_array_backed_too_many_bits.stderr  array_field_array_length_too_big.rs  array_field_array_length_too_big.stderr  array_field_float_element_type.rs  array_field_float_element_type.stderr  array_field_integer_backed_too_few_bits.rs  (+9 more)
bitfields/tests/compile_error_cases/panics/: bitfield_force_panic.rs  bitfield_force_panic.stderr
bitfields_impl/: Cargo.toml  README.md
bitfields_impl/src/: lib.rs
bitfields_impl/src/generating/: mod.rs
bitfields_impl/src/generating/bitfield/: bitfield_generator.rs  feature.rs  mod.rs
bitfields_impl/src/generating/bitflag/: bitflag_generator.rs  mod.rs
bitfields_impl/src/generating/common/: endian_conversion.rs  mod.rs
bitfields_impl/src/generation/: bit_manipulation_common.rs  bit_operations.rs  builder_struct.rs  common.rs  debug_impl.rs  default_impl.rs  field_const_getter_setter.rs  from_into_bits_conversions.rs  from_types_impl.rs  mod.rs  new_impl.rs  set_clear_bits_impl.rs  tuple_struct.rs
bitfields_impl/src/parsing/: bitfield_attribute.rs  bitfield_field.rs  mod.rs  number_parser.rs  types.rs
bitfields_impl/src/parsing/bitfields/: bitfield.rs  bitfield_parser.rs  mod.rs
bitfields_impl/src/parsing/bitflags/: bitflag.rs  bitflag_arguments.rs  bitflag_attribute_parser.rs  bitflag_parser.rs  mod.rs
bitfields_impl/src/parsing/common/: attribute_argument_parser.rs  compiler_error.rs  const_expr.rs  conversion_endian.rs  mod.rs  spanned_data_type.rs  spanned_token.rs  to_tokens.rs  type_parse_error.rs  visibility.rs
bitfields_proc_macro/: Cargo.toml  README.md
bitfields_proc_macro/src/: lib.rs
bitfields_proc_macro/src/generation/: debug_impl.rs  default_impl.rs  new_impl.rs  tuple_struct.rs
bitfields_proc_macro/src/parsing/: bitfield_attribute.rs  bitfield_field.rs  mod.rs  number_parser.rs
(+56 files in other folders)
