[package]
name = "bitfields"
version = "0.10.0"
authors = ["Gregory Gaines <gainesagregory@gmail.com>"]
description = "Macro for generating flexible bitfields. Useful for low-level code (embedded or emulators)."
keywords = ["bit" ,"bitfield", "bitfields", "struct"]
edition = "2021"
license = "MIT"
repository = "https://github.com/gregorygaines/bitfields-rs"
readme = "../README.md"
categories = ["data-structures", "embedded", "emulators", "encoding", "no-std"]

[dependencies]
bitfields-impl = { path = "../bitfields_impl", version = "0.7.0" }

[dev-dependencies]
trybuild = "1.0.101"
