[package]
name = "bitfields-impl"
version = "0.1.0"
authors = ["Gregory Gaines <gainesagregory@gmail.com>"]
description = "Macro for generating flexible bitfields. Useful for low-level code (embedded or emulators)."
keywords = ["bit" ,"bitfield", "bitfields", "struct"]
edition = "2021"
license = "MIT"
repository = "https://github.com/gregorygaines/bitfields-rs"
readme = "../README.md"
categories = ["data-structures", "embedded", "emulators", "encoding", "no-std"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
thiserror = "2.0.7"
