[package]
name = "bitfields-proc-macro"
version = "0.1.0"
authors = ["Gregory Gaines <gainesagregory@gmail.com>"]
description = "Internal procedural macro implementation for the bitfields crate"
keywords = ["bitfield", "proc_macro", "procmacro"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
thiserror = "2.0.7"
